--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@react-email/components": "0.0.21",
     "@types/cookie": "0.6.0",
     "@types/jsonwebtoken": "9.0.6",
-    "axios": "1.7.2",
+    "axios": "^1.7.5",
     "bcrypt": "5.1.1",
     "chart.js": "4.4.3",
     "cookie": "0.6.0",
