--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-email": "2.1.5",
     "react-icons": "5.2.1",
     "react-slick": "^0.30.2",
+    "react-time-picker": "^7.0.0",
     "react-to-print": "2.15.1",
     "resend": "3.4.0",
     "slick-carousel": "^1.8.1"
