--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bcrypt": "5.1.1",
     "chart.js": "4.4.3",
     "cookie": "0.6.0",
+    "date-fns": "^4.1.0",
     "dotenv": "16.4.5",
     "framer-motion": "11.2.11",
     "js-cookie": "3.0.5",
