--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "cookie": "0.6.0",
     "date-fns": "^4.1.0",
     "dotenv": "16.4.5",
+    "escpos": "^3.0.0-alpha.6",
+    "escpos-network": "^3.0.0-alpha.5",
     "framer-motion": "11.2.11",
     "js-cookie": "3.0.5",
     "jsonwebtoken": "9.0.2",
