--- a/package.json
+++ b/package.json
@@ -14,40 +14,42 @@
     "@react-email/components": "0.0.21",
     "@types/cookie": "0.6.0",
     "@types/jsonwebtoken": "9.0.6",
-    "axios": "^1.7.5",
+    "axios": "1.7.5",
     "bcrypt": "5.1.1",
     "chart.js": "4.4.3",
     "cookie": "0.6.0",
-    "date-fns": "^4.1.0",
+    "date-fns": "4.1.0",
     "dotenv": "16.4.5",
-    "escpos": "^3.0.0-alpha.6",
-    "escpos-network": "^3.0.0-alpha.5",
+    "escpos": "3.0.0-alpha.6",
+    "escpos-network": "3.0.0-alpha.5",
     "framer-motion": "11.2.11",
+    "html2canvas": "1.4.1",
     "js-cookie": "3.0.5",
     "jsonwebtoken": "9.0.2",
+    "jspdf": "2.5.2",
     "next": "14.2.4",
     "react": "18",
     "react-chartjs-2": "5.2.0",
     "react-dom": "18",
     "react-email": "2.1.5",
     "react-icons": "5.2.1",
-    "react-slick": "^0.30.2",
-    "react-switch": "^7.0.0",
-    "react-time-picker": "^7.0.0",
+    "react-slick": "0.30.2",
+    "react-switch": "7.0.0",
+    "react-time-picker": "7.0.0",
     "react-to-print": "2.15.1",
     "resend": "3.4.0",
     "slick-carousel": "^1.8.1",
-    "typewriter-effect": "^2.21.0"
+    "typewriter-effect": "2.21.0"
   },
   "devDependencies": {
-    "@tailwindcss/forms": "^0.5.7",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
+    "@tailwindcss/forms": "0.5.7",
+    "@types/node": "20",
+    "@types/react": "18",
+    "@types/react-dom": "18",
+    "eslint": "8",
     "eslint-config-next": "14.2.4",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "postcss": "8",
+    "tailwindcss": "3.4.1",
+    "typescript": "5"
   }
 }
